fix css layout bugs

--- a/src/styles/components/Card.module.css
+++ b/src/styles/components/Card.module.css
@@ -7,6 +7,8 @@
   border-radius: 6px;
   background: var(--light-gray);
 
+  cursor: pointer;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,7 +16,7 @@
 }
 
 .container h2 {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 
 .container:hover {
