--- a/src/styles/components/Sidebar.module.css
+++ b/src/styles/components/Sidebar.module.css
@@ -14,7 +14,7 @@
   
   position: relative;
   animation-name: slide;
-  animation-duration: 2s;
+  animation-duration: 1.2s;
   animation-timing-function: ease;
 }
 
